Fixed image paths to match their new locations

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,7 +14,7 @@ V 1.6
 - Added the option to enable running filters over your inventory.
 - Due to the above the "Test Filters" option will no longer show equipment that you have equipped on frames.
 - Fixed the review list panel from rendering above the add filter pop up.
-- Added an option to allow salvaging in unknown zones, this is incase a new zone has been released but I haven't added it to Scrapii's zone list, if this option is checked Scrapii will salvage items in zones it doesn't know of.
+- Added an option to allow salvaging in unknown zones, this is in-case a new zone has been released but I haven't added it to Scrapii's zone list, if this option is checked Scrapii will salvage items in zones it doesn't know of.
 
 V 1.5
 --------------------------
