--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,7 +9,8 @@ V 1.7
 - Some small UI tweaks.
 - Fixed an issue where the review list would break when trying to salvage an item with a guid with a quantity of more than one.
 - Prompts and the review list will now properly show a weapons full name including the prefix.
-- Prompts now show the rarity and items name in the center screen flash instead of jsut "- Scrapii -".
+- Prompts now show the rarity and items name in the center screen flash instead of just "- Scrapii -".
+- Made the "zones to salvaging in" feature more future proof, if R5 add new zones then Scrapii is self update after the first load (that is after you first login do a "/rui" and they should be in the list)
 
 V 1.6
 --------------------------
