Fixed an issue that could prevent new filters being added to a filterset.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ V 1.7
 - Prompts now show the rarity and items name in the center screen flash instead of just "- Scrapii -".
 - Made the "zones to salvaging in" feature more future proof, if R5 add new zones then Scrapii is self update after the first load (that is after you first login do a "/rui" and they should be in the list).
 - Swapped over to the new lib_ContexualMenu for shiny context menus!
+- Fixed an issue that could prevent new filters being added to a filterset.
 
 V 1.6
 --------------------------
